# global_i18n_standard

./: bundle.json  i18n.gni  ohos.build
frameworks/intl/: BUILD.gn
frameworks/intl/etc/: forbidden_languages.xml  forbidden_regions.xml  language_config.para  supported_regions.xml  white_languages.xml
frameworks/intl/include/: character.h  collator.h  date_time_format.h  i18n_break_iterator.h  i18n_calendar.h  i18n_timezone.h  index_util.h  locale_config.h  locale_info.h  measure_data.h  number_format.h  phone_number_format.h  plural_rules.h  preferred_language.h  relative_time_format.h
frameworks/intl/src/: character.cpp  collator.cpp  date_time_format.cpp  i18n_calendar.cpp  i18n_timezone.cpp  index_util.cpp  locale_config.cpp  locale_info.cpp  locale_util.cpp  measure_data.cpp  number_format.cpp  phone_number_format.cpp  plural_rules.cpp  preferred_language.cpp  relative_time_format.cpp  supported_locales.xml
frameworks/intl/test/: BUILD.gn
frameworks/intl/test/unittest/: intl_test.cpp  intl_test.h  locale_config_test.cpp  locale_config_test.h
frameworks/zone/: BUILD.gn
frameworks/zone/src/: zone_util.cpp
frameworks/zone/test/: BUILD.gn
frameworks/zone/test/unittest/: zone_util_performance_test.cpp  zone_util_test.cpp
interfaces/js/kits/: @ohos.i18n.d.ts  @ohos.intl.d.ts  BUILD.gn
interfaces/js/kits/include/: i18n_addon.h  intl_addon.h
interfaces/js/kits/src/: i18n_addon.cpp  intl_addon.cpp
interfaces/native/innerkits/i18n/include/: locale_util.h
interfaces/native/innerkits/preferred_language/include/: preferred_language.h
